# marin

data_browser/src/: App.js  App.test.js  ExperimentPage.js  HomePage.js  ViewPage.js  index.css  theme.js
data_browser/src/__tests__/: ExperimentPage.test.js  HomePage.test.js  ViewPage.test.js
data_browser/src/components/: AppShell.js  StateViews.js
data_browser/src/components/experiment/: ExperimentStepTable.js  ExperimentSummaryCards.js  StatusChip.js
data_browser/src/components/home/: OpenPathDialog.js  RootPathCards.js
data_browser/src/components/view/: DirectoryTable.js  FilterSortHighlightPanel.js  JsonTree.js  PathListPanel.js  RecordComparisonTable.js  ViewToolbar.js
data_browser/src/hooks/: useViewQueryState.js
docs/tutorials/: data-browser.md
experiments/: llama.py
experiments/evals/: run_ruler_eval.py  task_configs.py
experiments/speedrun/: scaling_common.py
experiments/speedrun/adamc_llama_scaling/: adamc_sweep.py
experiments/speedrun/adamh_llama_scaling/: adamh_sweep.py
experiments/speedrun/adamw_llama_scaling/: adamw_sweep.py
experiments/speedrun/c-adamc_llama_scaling/: cadamc_sweep.py
experiments/speedrun/cautious_llama_scaling/: cautious_sweep.py
experiments/speedrun/muon_llama_scaling/: muon_sweep.py
experiments/speedrun/muon_qwen3_scaling/: muon_sweep.py
experiments/speedrun/muonh_qwen3_scaling/: muonh_sweep.py
lib/levanter/src/levanter/: eval_harness.py
lib/marin/: pyproject.toml
lib/marin/src/marin/evaluation/evaluators/: levanter_lm_eval_evaluator.py  lm_eval_length_utils.py  lm_evaluation_harness_evaluator.py
tests/: test_experiments_llama_param_count.py
tests/evals/: test_ruler_eval_integration.py
