[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
requires-python = ">=3.11,<3.13"

[project]
name = "marin"
version = "0.1.0"

requires-python = ">=3.11"
dependencies = [
    "braceexpand",
    "cryptography>=45",
    "datasets<4.0.0",
    "ddsketch",
    "deepdiff",
    "draccus>=0.11.5",
    "dupekit",
    "fasteners>=0.19",
    "flask",
    "floret",
    "fray",
    "fsspec>=2025.3.0",
    "gcsfs",
    "google-api-python-client>=2.175.0",
    "google-cloud-storage",
    "google-cloud-storage-transfer",
    "haliax",
    "jax==0.8.0",  # vllm-tpu currently requires this exact version
    "jaxopt>=0.8.3",
    "levanter[serve]",
    "lxml[html_clean]",
    "lz4",
    "markdownify==0.12.1",
    "multiprocess==0.70.16",
    "numpy",
    "openai",
    "pandas>=2.0",
    "plotly",
    "pyarrow>=22",
    "ray==2.53.0",
    "regex",
    "requests",
    "resiliparse>=0.17.2",
    "s3fs>=2024",
    "toml",
    "torch>=2.7.0",
    "torchvision==0.24.0",
    "tqdm",
    "tqdm-loggable",
    "wandb",
    "warcio",
    "zephyr",
]

[project.license]
file = "../../LICENSE"

[dependency-groups]
test = [
    "pytest>=8.3.2",
    "pytest-asyncio",
    "pytest-xdist",
    "pytest-timeout",
    "pytest-cov",
    "pytest-profiling",
    # need this for integration tests
    "pip",
    "openai-responses",
    # for scaling law plotting tests
    "plotly",
]
lint = [
    "ruff==0.14.3",
    "black==25.9.0",
    "mypy>=1.4.1",
    "pyrefly==0.40.0",
    "types-PyYAML",
    "types-requests",
    "types-six",
    "click>=8.0",
    "pyyaml>=6.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.7.0",
    "pymdown-extensions>=10.0.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-git-authors-plugin>=0.9.0",
    "mkdocs-minify-plugin>=0.7.0",
    "mkdocs-include-markdown-plugin>=7.1.5",
]

math = ["pylatexenc", "sympy>=1.12.1,<1.14"]

metrics = ["google-cloud-logging"]

dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "docs" },
    { include-group = "math" },
]

[tool.uv]
conflicts = [
    [
        { extra = "gpu" },
        { extra = "tpu" },
    ],
    [
        { extra = "gpu" },
        { extra = "cpu" },
    ],
    [
        { extra = "vllm" },
        { extra = "cpu" },
    ],
    [
        { extra = "vllm" },
        { extra = "cuda12" },
    ],
]


[project.optional-dependencies]

gpu = ["jax[cuda12]==0.8.0", "torch==2.9.0", "torchvision==0.24.0"]
tpu = ["jax[tpu]==0.8.0", "torch==2.9.0", "torchvision==0.24.0"]

cpu = [
  "jax==0.8.0",
  "torch==2.9.0",
  # Linux x86_64
  "torchvision==0.24.0+cpu; sys_platform == 'linux' and platform_machine == 'x86_64'",
  # Windows x86_64 (AMD64)
  "torchvision==0.24.0+cpu; sys_platform == 'win32' and platform_machine == 'AMD64'",
  # Linux aarch64, macOS arm64: PyPI default wheel
  "torchvision==0.24.0; (sys_platform == 'linux' and platform_machine == 'aarch64') or (sys_platform == 'darwin' and platform_machine == 'arm64')",
]

rl = [
    "prime",
    "sympy>=1.12.1,<1.14",
    "verifiers==0.1.5",
]

eval = [
    "lm-eval[math,api,ruler]@git+https://github.com/stanford-crfm/lm-evaluation-harness@d5e3391f22cde186c827674d5c3ec7c5f4fe0cab",
]

# Evalchemy for reasoning-focused LLM evaluations (AIME, MATH500, HumanEval+, etc.)
# Note: Evalchemy is cloned and run at runtime by the EvalchemyEvaluator rather than
# being installed as a pip dependency, due to local file dependencies in evalchemy's
# pyproject.toml that don't work with pip git installs.
# The evaluator clones from commit 6ed674159b37f740f2353a86f596f49f6ac13c19 (2025-01-08)
evalchemy = [
    # Core dependencies needed to run evalchemy
    "lm-eval[math]@git+https://github.com/stanford-crfm/lm-evaluation-harness@d5e3391f22cde186c827674d5c3ec7c5f4fe0cab",
    "sympy>=1.12.1,<1.14",
    "antlr4-python3-runtime==4.11",
    "bespokelabs-curator",  # Required by evalchemy's curator_lm module
    "sqlalchemy",  # Required by evalchemy's database models
]

vllm =[
    "vllm-tpu==0.13.2.post6",
    "triton==3.5.0; platform_system == 'Linux' and platform_machine == 'x86_64'",
]

harbor = [
    "harbor>=0.1.42",
]

math = ["pylatexenc", "sympy"]

[[tool.uv.index]]
name = "marin-resiliparse"
url = "https://marin-community.github.io/chatnoir-resiliparse/simple"

[tool.uv.sources]
torchvision = [
    # Default to the CPU index for TPU/CPU builds
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cpu", extra = "tpu" },
    # GPU index only when --extra gpu
    { index = "pytorch-cu128", extra = "gpu" },
]
resiliparse = { index = "marin-resiliparse" }
# Use CUDA PyTorch for --extra=gpu on Linux, CPU PyTorch for TPU/CPU builds
torch = [
    { index = "pytorch-cu128", extra = "gpu", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cpu", extra = "tpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/marin"]

[tool.hatch.build.targets.sdist]
packages = ["src/marin"]
